Get MenuHelpersX compiling on 64-bit Mac OS X, some minor memory mgmt cleanup. b=459729 r=mstange sr=roc